# origin

1.EnumerationsAndStructures/1.EnumerationMonths/EnumerationMonths/: EnumerationMonths.sln
1.EnumerationsAndStructures/2.Structures/structures/: structures.sln
1.EnumerationsAndStructures/3.Structures2/Structures2/: Structures2.sln
10.PostgreSQLC++/PsqlTest2/: PsqlTest2.sln
10.PostgreSQLC++/PsqlTest2/PsqlTest2/: CmakeLists.txt  PsqlTest2.vcxproj  main.cpp
12.Multithreading/3.ClientQueueUpdated/ClientQueue/: ClientQueue.sln
12.Multithreading/Docker/ForEach/: docker-compose.yml  dockerfile
12.Multithreading/Docker/Hello/: Dockerfile  test.bat
12.Multithreading/ForEach/ForEach/: ForEach.sln
12.Multithreading/MultiThreadingClientQueue/: MultiThreadingClientQueue.sln
12.Multithreading/MultiThreadingClientQueue/MultiThreadingClientQueue/: MultiThreadingClientQueue.vcxproj  main.cpp
12.Multithreading/ParallelComputing/ParallelComputing/: ParallelComputing.sln
12.Multithreading/ProgressBar/ProgressBar/: ProgressBar.sln
12.Multithreading/SecureData/SecureData/: SecureData.sln
12.Multithreading/Sorting/Sorting/: Sorting.sln
13++/1.2SmartCopy/Project1/: Project1.sln
13++/1.Smart/Project1/: Project1.sln
13++/2.1.Test/Test/: Test.sln
13++/2.2.Test/Test/: Test.sln
13++/3.Functor/1/: 1.sln
13++/3.Functor/2/: 2.sln
13++/3.Functor/3/: 3.sln
13++/4.2.STL/2.1/: 2.1.sln
9.Cmake/1.My_first_cmake_project/: main.cpp
9.Cmake/2.My_second_cmake_project/: CMakeLists.txt  Parallelogram.h  Quadrilateral.cpp  Rhombus.cpp  Triangle.h  main.cpp
(+173 files in other folders)
