cmake_minimum_required(VERSION 3.10)

project(my_second_cmake_project)

add_executable(my_second_cmake_program 
main.cpp
EquilateralTriangle.cpp
Figure.cpp
IsoscelesTriangle.cpp
IsoscelesTriangle.cpp
Quadrilateral.cpp
Rectangle.cpp
Rectangle.cpp
RightTriangle.cpp
Square.cpp
Triangle.cpp
Rhombus.cpp
Parallelogram.cpp

)